# totchef

./: .gitignore  .rumdl.toml  CLAUDE.md  README.md  apps_performance_config.py  apt.toml  apt_runner.py  gpu_config.py  justfile  perf.toml  perf_runner.py  pyproject.toml  run_apt.py  run_gpu_conf.py
.github/: copilot-instructions.md
docs/board/: next.md
docs/investigations/: sleep-crash.md
docs/performance/: README.md
examples/: recipe.toml  totchef_recipe.toml
files/: 99-trusted-gpgd-autounlock
plan/: cook-refactor-report.md  cook-refactor.md  plan-chef-phase2.md
reports/: about-gpu-2026-05-17T11-04-40-999Z.txt  about-gpu-2026-05-17T11-14-03-019Z.txt
scripts/: clone_reference.py
src/: apps_config.py  apps_config.toml  apt.toml  apt_cook.py  apt_pkg_cook.py  apt_repo_cook.py  bash.py  bash_cook.py  cargo.py  cargo_config.toml  cargo_cook.py  chef.py  configure_apps.py  configure_apps_cook.py  configure_gpu.py  configure_gpu_cook.py  configure_with_apt.py  cook_base.py  cook_runner.py  harness.py  install.toml  install_cargo_packages.py  install_from_urls.py  install_uv_packages.py  logs.py  perf.toml  recipe.toml  recipe_graph.py  run_apps_conf.py  run_apt.py  schema_lint.py  snap_cook.py  terminal.py  url_config.toml  url_cook.py  uv_cook.py  write-if-changed
src/cooks/: apt_pkg_root_cook.py  apt_repo_root_cook.py  bash_cook.py  cargo_cook.py  chromium_flags_cook.py  desktop_cook.py  file_cook.py  settings_cook.py  (+3 more)
tests/: test_chef.py  test_cook_runner.py  test_docstrings.py  test_harness.py  test_merge_section_defaults.py  test_output_parsers.py  test_recipe_graph.py  test_recipe_lint.py  test_rewrite_exec.py  test_schema_validation.py  test_terminal.py
(+79 files in other folders)
