[project]
name = "sys-conf-py"
version = "0.1.0"
description = "Idempotent apt repo + key + pinning setup for a fresh Ubuntu/Kubuntu install."
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7",
    "pydantic>=2.13.4",
    "toon-format>=0.9.0b1",
    "typer>=0.12",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
