[project]
name = "sys-conf-py"
version = "0.1.0"
description = "Idempotent apt repo + key + pinning setup for a fresh Ubuntu/Kubuntu install."
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7",
    "pydantic>=2.13.4",
    "rich>=14",
    "toon-format>=0.9.0b1",
    "typer>=0.12",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
    "reference_clones",
]

[tool.vulture]
paths = ["src"]
# Cooks are imported by name convention (recipe_graph.load_cook_class -> importlib),
# so vulture sees no static reference and reports every cook class as dead. They are
# the app's entry points, not dead code — ignore by suffix. Same for the pydantic
# plumbing it can't trace: `model_config` is read by the model metaclass, and
# @model_validator methods are invoked by the decorator, never called by name.
ignore_names = ["*Cook", "model_config"]
ignore_decorators = ["@model_validator"]
